--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.8.1
+autopep8==1.7.0
 certifi==2022.9.14
 click==8.1.3
 colorama==0.4.5
@@ -5,16 +7,21 @@ distlib==0.3.6
 filelock==3.8.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.2
 MarkupSafe==2.1.1
 pipenv==2022.9.8
 platformdirs==2.5.2
+pycodestyle==2.9.1
 PyMySQL==1.0.2
+python-dotenv==0.21.0
 six==1.16.0
 SQLAlchemy==1.4.41
+toml==0.10.2
 virtualenv==20.16.5
 virtualenv-clone==0.5.7
 Werkzeug==2.2.2
